added support for reading and writing GZiped XML/GML
refs #421

Change-Id: Ifdaf7a4034834a0d1202af7c5120ddfdd228bee7

--- a/io/plugins/eu.esdihumboldt.hale.io.gml/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.gml/plugin.xml
@@ -31,6 +31,34 @@
             </parameter>
          </describer>
       </content-type>
+      <content-type
+            base-type="eu.esdihumboldt.hale.io.xml.gzip"
+            file-extensions="gml.gz,xml.gz,gz"
+            id="eu.esdihumboldt.hale.io.gml.gzip"
+            name="GZiped GML file"
+            priority="normal">
+         <describer
+               class="eu.esdihumboldt.hale.common.core.io.util.GZipXMLRootElementContentDescriber">
+            <parameter
+                  name="element"
+                  value="FeatureCollection">
+            </parameter>
+         </describer>
+      </content-type>
+      <content-type
+            base-type="eu.esdihumboldt.hale.io.xml.gzip"
+            file-extensions="gml.gz,xml.gz,gz"
+            id="eu.esdihumboldt.hale.io.citygml.gzip"
+            name="GZiped CityGML file"
+            priority="normal">
+         <describer
+               class="eu.esdihumboldt.hale.common.core.io.util.GZipXMLRootElementContentDescriber">
+            <parameter
+                  name="element"
+                  value="CityModel">
+            </parameter>
+         </describer>
+      </content-type>
    </extension>
    <extension
          point="eu.esdihumboldt.hale.io.provider">
@@ -40,6 +68,9 @@
             name="GML (Features)">
          <contentType
                ref="eu.esdihumboldt.hale.io.gml">
+         </contentType>
+         <contentType
+               ref="eu.esdihumboldt.hale.io.gml.gzip">
          </contentType>
       </provider>
       <provider
@@ -57,6 +88,9 @@
          <contentType
                ref="eu.esdihumboldt.hale.io.gml">
          </contentType>
+         <contentType
+               ref="eu.esdihumboldt.hale.io.gml.gzip">
+         </contentType>
       </provider>
       <provider
             class="eu.esdihumboldt.hale.io.gml.writer.XmlInstanceWriter"
@@ -65,6 +99,9 @@
          <contentType
                ref="org.eclipse.core.runtime.xml">
          </contentType>
+         <contentType
+               ref="eu.esdihumboldt.hale.io.xml.gzip">
+         </contentType>
       </provider>
       <provider
             class="eu.esdihumboldt.hale.io.gml.writer.CityGMLInstanceWriter"
@@ -72,6 +109,9 @@
             name="CityGML (CityModel)">
          <contentType
                ref="eu.esdihumboldt.hale.io.citygml">
+         </contentType>
+         <contentType
+               ref="eu.esdihumboldt.hale.io.citygml.gzip">
          </contentType>
       </provider>
    </extension>
