support validating GZiped XML files
refs #421
refs #484

Change-Id: I92c8fb6daca74f3649fd773d751fd54fa6d0a978

--- a/io/plugins/eu.esdihumboldt.hale.io.xml/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.xml/plugin.xml
@@ -10,6 +10,9 @@
          <contentType
                ref="org.eclipse.core.runtime.xml">
          </contentType>
+         <contentType
+               ref="eu.esdihumboldt.hale.io.xml.gzip">
+         </contentType>
       </provider>
    </extension>
    <extension
