added missing GZip content type for XML import
refs #484

Change-Id: I8de4b3392500c33eeadb7ff5d89654bbf947de1b
Reviewed-on: http://gerrit.esdi-community.eu/1517
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.gml/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.gml/plugin.xml
@@ -80,6 +80,9 @@
          <contentType
                ref="org.eclipse.core.runtime.xml">
          </contentType>
+         <contentType
+               ref="eu.esdihumboldt.hale.io.xml.gzip">
+         </contentType>
       </provider>
       <provider
             class="eu.esdihumboldt.hale.io.gml.writer.GmlInstanceWriter"
