added Compare variant that only displays populated properties
Only makes a difference if source data is loaded.
Live transformation must be enabled for it to apply
to transformed instances.

refs #487

Change-Id: Ib4ecc4e4e60731ac658f8c47efffd92b22cb5320

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.data/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.data/plugin.xml
@@ -24,10 +24,16 @@
    <extension
          point="eu.esdihumboldt.hale.ui.views.data">
       <instanceView
+            class="eu.esdihumboldt.hale.ui.views.data.internal.compare.PopulatedInstanceTreeViewer"
+            icon="icons/compare2.gif"
+            id="eu.esdihumboldt.hale.ui.views.data.compare"
+            name="Compare (only populated)">
+      </instanceView>
+      <instanceView
             class="eu.esdihumboldt.hale.ui.views.data.internal.compare.DefinitionInstanceTreeViewer"
             icon="icons/compare.gif"
-            id="eu.esdihumboldt.hale.ui.views.data.compare"
-            name="Compare">
+            id="eu.esdihumboldt.hale.ui.views.data.compare.all"
+            name="Compare (full schema)">
       </instanceView>
       <instanceView
             class="eu.esdihumboldt.hale.ui.views.data.internal.explore.InstanceExplorer"
