--- a/server/plugins/eu.esdihumboldt.hale.server.application/build.properties
+++ b/server/plugins/eu.esdihumboldt.hale.server.application/build.properties
@@ -1,5 +1,4 @@
 source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               WEB-INF/
+               plugin.xml
