added security extender bundle
Allows common security configuration for all war bundles
using the SecuredBundleXmlWebApplicationContext.

refs #507

Change-Id: I8f1e5c419227ebf667b77c46357a1be7d1ab4928

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.war/WEB-INF/web.xml
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.war/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 	<context-param>
 		<param-name>contextClass</param-name>
 		<param-value>
-			org.springframework.web.context.support.XmlWebApplicationContext
+			eu.esdihumboldt.hale.server.security.extender.SecuredBundleXmlWebApplicationContext
 		</param-value>
 	</context-param>
 
