--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.war/WEB-INF/web.xml
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.war/WEB-INF/web.xml
@@ -14,6 +14,15 @@
 		<filter-name>requestContextFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
