--- a/server/plugins/eu.esdihumboldt.hale.server.console.war/WEB-INF/web.xml
+++ b/server/plugins/eu.esdihumboldt.hale.server.console.war/WEB-INF/web.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="de.fhg.igd.objects.service.war" version="2.4"
-	xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>HALE Web</display-name>
-	
-	<!-- expose current request to thread. this is needed so we can
-	     use dependency injection for the current request in a wicket application -->
+
+	<!-- expose current request to thread. this is needed so we can use dependency 
+		injection for the current request in a wicket application -->
 	<filter>
 		<filter-name>requestContextFilter</filter-name>
 		<filter-class>org.springframework.web.filter.RequestContextFilter</filter-class>
@@ -24,7 +23,18 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
+	<!-- filter that puts user and remote address in the slf4j MDC, to be called 
+		after spring security -->
+	<filter>
+		<filter-name>loggingFilter</filter-name>
+		<filter-class>eu.esdihumboldt.hale.server.webapp.filter.RequestLoggingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>loggingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<context-param>
 		<param-name>contextClass</param-name>
 		<param-value>
@@ -35,7 +45,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
- 
+
 	<servlet>
 		<servlet-name>default</servlet-name>
 		<servlet-class>org.eclipse.jetty.servlet.DefaultServlet</servlet-class>
@@ -54,12 +64,10 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet>
 		<servlet-name>console</servlet-name>
-		<servlet-class>
-			org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextClass</param-name>
 			<param-value>
@@ -73,7 +81,7 @@
 		<servlet-name>console</servlet-name>
 		<url-pattern>console/*</url-pattern>
 	</servlet-mapping>
-		
+
 	<!-- map wicket servlet -->
 	<servlet-mapping>
 		<servlet-name>wicket</servlet-name>
