--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.war/WEB-INF/web.xml
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.war/WEB-INF/web.xml
@@ -23,6 +23,17 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- filter that puts user and remote address in the slf4j MDC, to be called 
+		after spring security -->
+	<filter>
+		<filter-name>loggingFilter</filter-name>
+		<filter-class>eu.esdihumboldt.hale.server.webapp.filter.RequestLoggingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>loggingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
