new version of archive project export
deletion of temporary directory currently not working

refs #420

Change-Id: I5995b710ad93f7214777eea6975c2184cc89e144

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -800,6 +800,13 @@
                ref="eu.esdihumboldt.hale.io.project.hale25.writer">
          </provider>
       </configPage>
+      <configPage
+            class="eu.esdihumboldt.hale.ui.io.project.pages.ArchiveProjectWriterConfigurationPage"
+            order="0">
+         <provider
+               ref="eu.esdihumboldt.hale.io.project.hale25.zip.writer">
+         </provider>
+      </configPage>
    </extension>
    <extension
          point="org.eclipse.ui.commandImages">
