added Thorsten perspective
Change-Id: Iaf9be3d7c237c8f2c02e3d66fe0aa0e302196110

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -28,6 +28,11 @@
             id="eu.esdihumboldt.hale.ui.application.perspective.data"
             name="%perspective.data.name">
       </perspective>
+      <perspective
+            class="eu.esdihumboldt.hale.ui.application.ThorstenPerspective"
+            id="thorsten"
+            name="Thorsten">
+      </perspective>
    </extension>
    <extension
          id="id1"
