--- a/server/plugins/eu.esdihumboldt.hale.server.projects.war/WEB-INF/web.xml
+++ b/server/plugins/eu.esdihumboldt.hale.server.projects.war/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 	</servlet>
 
 	<servlet>
-		<servlet-name>wicket</servlet-name>
+		<servlet-name>wicket-projects</servlet-name>
 		<servlet-class>org.apache.wicket.protocol.http.WicketServlet</servlet-class>
 		<init-param>
 			<param-name>applicationFactoryClassName</param-name>
@@ -75,7 +75,7 @@
 
 	<!-- map wicket servlet -->
 	<servlet-mapping>
-		<servlet-name>wicket</servlet-name>
+		<servlet-name>wicket-projects</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
