--- a/server/plugins/eu.esdihumboldt.hale.server.status.war/build.properties
+++ b/server/plugins/eu.esdihumboldt.hale.server.status.war/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               WEB-INF/
+               WEB-INF/,\
+               images/
