xslt generator: generate container
...based on specified root element.

refs #116

Change-Id: Iee6cd17eff9d29bd75e980daef494689f83dbe9b
Reviewed-on: http://gerrit.esdi-community.eu/1677
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.gml.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.gml.ui/plugin.xml
@@ -8,6 +8,9 @@
          <provider
                ref="eu.esdihumboldt.hale.io.xml.writer">
          </provider>
+         <provider
+               ref="eu.esdihumboldt.hale.io.xslt">
+         </provider>
       </configPage>
    </extension>
    <extension
