added extension points for XSL transformations
...together with dummy versions of XSL type and property
transformation interfaces.

refs #513
refs #514

Change-Id: I6018b8d5cc003eeffc1acc1226a48870481dac1f

--- a/ext/xslt/eu.esdihumboldt.hale.io.xslt/plugin.xml
+++ b/ext/xslt/eu.esdihumboldt.hale.io.xslt/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="eu.esdihumboldt.hale.xslt" name="XSL Transformation Functions" schema="schema/eu.esdihumboldt.hale.xslt.exsd"/>
    <extension
          point="eu.esdihumboldt.hale.io.provider">
       <provider
@@ -21,6 +22,14 @@
             name="XSLT transformation"
             priority="normal">
       </content-type>
+   </extension>
+   <extension
+         point="eu.esdihumboldt.hale.xslt">
+      <typeTransformation
+            class="eu.esdihumboldt.hale.io.xslt.transformations.XslRetype"
+            function="eu.esdihumboldt.hale.align.retype"
+            id="eu.esdihumboldt.hale.align.retype.xslt">
+      </typeTransformation>
    </extension>
 
 </plugin>
