Thorsten perspective: added icon, map extension
refs #489

Change-Id: If48f67b2e124f4681d14dce9867e9cf007af76f8

--- a/ext/styledmap/eu.esdihumboldt.hale.ui.views.styledmap/plugin.xml
+++ b/ext/styledmap/eu.esdihumboldt.hale.ui.views.styledmap/plugin.xml
@@ -358,5 +358,17 @@
             restorable="true">
       </view>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="eu.esdihumboldt.hale.ui.application.perspective.thorsten">
+         <view
+               id="eu.esdihumboldt.hale.ui.views.styledmap"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipse.ui.views.PropertySheet">
+         </view>
+      </perspectiveExtension>
+   </extension>
 
 </plugin>
