use an external browser for the help on linux
refs #521

Change-Id: I2648358478c42e5eef90fa43c666e9218ea1ffdc

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin_customization.ini
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin_customization.ini
@@ -9,3 +9,4 @@ org.eclipse.ui.intro/INTRO_STANDBY_PAGE=firststeps
 org.eclipse.ui.intro/INTRO_HOME_PAGE=firststeps
 org.eclipse.ui.intro.universal/INTRO_DATA=product:introData.xml
 org.eclipse.help.base/topic_css=/PRODUCT_PLUGIN/book_content.css
+org.eclipse.help.base/always_external_browser=%use_external_browser
