fixed user guide build properties
refs #522

Change-Id: I22e66645275daad83b167b70525c3013ba985ddf
Reviewed-on: http://gerrit.esdi-community.eu/1713
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/build.properties
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/build.properties
@@ -3,5 +3,6 @@ bin.includes = plugin.xml,\
                html/,\
                *.xml,\
                images/,\
-               projects/
+               projects/,\
+               scripts/
 
