tree to graph conversion provider with GraphML subclass
Change-Id: I2bace1d5079f0443849c4edcd0a514118aad416c

--- a/ui/plugins/eu.esdihumboldt.hale.ui.cst.debug/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.cst.debug/plugin.xml
@@ -8,6 +8,13 @@
             key="cst.ttree.populated"
             label="Transformation tree">
       </metadata>
+      <action
+            class="eu.esdihumboldt.hale.ui.cst.debug.metadata.internal.MetadataGraphAction"
+            icon="icons/tree_mode.gif"
+            id="eu.esdihumboldt.hale.ui.cst.debug.action1"
+            key="cst.ttree.populated"
+            name="Display tree dot graph">
+      </action>
    </extension>
    <extension
          point="eu.esdihumboldt.cst.instancetransformation">
