--- a/ext/xslt/eu.esdihumboldt.hale.io.xslt.test/build.properties
+++ b/ext/xslt/eu.esdihumboldt.hale.io.xslt.test/build.properties
@@ -2,3 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
+sourceFileExtensions=*.java, *.groovy
+compilerAdapter=org.codehaus.groovy.eclipse.ant.GroovyCompilerAdapter
+compilerAdapter.useLog=true
