--- a/ext/xslt/eu.esdihumboldt.hale.io.xslt/build.properties
+++ b/ext/xslt/eu.esdihumboldt.hale.io.xslt/build.properties
@@ -4,3 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                schema/
+sourceFileExtensions=*.java, *.groovy
+compilerAdapter=org.codehaus.groovy.eclipse.ant.GroovyCompilerAdapter
+compilerAdapter.useLog=true
