Expand alignment and cell.
something with cell disables from base alignments does not work
there are some errors in other groovy tests due to changes to
TransformationTree

refs #530

Change-Id: Ic46b20d936c6347814b6d3dc8270730eddcd0491

--- a/common/plugins/eu.esdihumboldt.hale.common.align.test/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align.test/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
-<fragment>
+<plugin>
    <extension
          point="eu.esdihumboldt.hale.align.annotation">
       <annotation
@@ -19,4 +19,4 @@
       </complexValue>
    </extension>
 
-</fragment>
+</plugin>
