extended JDBC geometry extension point
...to include a GeometryAdvisor.

The geometry advisor is responsible for configuring geometry
column types and converting geometries so they can be inserted
into the database.

Added dummy GeometryAdvisor for PostGIS.

refs #450

Change-Id: I0509fc856f6b8c64a17640144fd4a87435e64a0c
Reviewed-on: http://gerrit.esdi-community.eu/1769
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.jdbc.postgresql/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.jdbc.postgresql/plugin.xml
@@ -9,10 +9,10 @@
             type="org.postgresql.PGConnection">
       </connection>
       <geometrytype
+            advisor="eu.esdihumboldt.hale.io.jdbc.postgresql.PostGISGeometries"
             connection="org.postgresql.PGConnection"
             id="eu.esdihumboldt.hale.io.jdbc.postgresql.postgis.geometry"
-            name="geometry"
-            type="com.vividsolutions.jts.geom.Geometry">
+            name="geometry">
       </geometrytype>
    </extension>
 
