added save export instance wizard (incomplete)
refs #398

Change-Id: I73bb71ed72582d090cdbddf1b3671485f5143023

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -532,6 +532,24 @@
             </with>
          </enabledWhen>
       </action-ui>
+      <action-ui
+            action="eu.esdihumboldt.hale.io.instance.write.transformed"
+            customTitle="Save export transformed data"
+            id="eu.esdihumboldt.hale.io.instance.write.transformed.save.ui"
+            label="Save Transformed data..."
+            priority="10"
+            projectResource="false"
+            wizard="eu.esdihumboldt.hale.ui.io.instance.SaveInstanceExportWizard">
+         <enabledWhen
+               disabledReason="No transformed instances available">
+            <with
+                  variable="hale.instances.has_transformed">
+               <equals
+                     value="true">
+               </equals>
+            </with>
+         </enabledWhen>
+      </action-ui>
    </extension>
    <extension
          point="eu.esdihumboldt.hale.ui.io.source">
