Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [access "refs/*"]
 	owner = group Administrators
+	owner = group HALE Integrators
 [project]
 	description = HUMBOLDT Alignment Editor (HALE)
 [receive]
