save/load alignment using JAXB (wip)
...and added support for cell annotations/documentation.
Implemented example AnnotationDescriptor used in test case.

Change-Id: If201b39fd284a2f22159ac6224ecc37bbcb87f70

--- a/common/plugins/eu.esdihumboldt.hale.common.align/build.properties
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/build.properties
@@ -5,3 +5,6 @@ bin.includes = META-INF/,\
                icons/,\
                schema/
 source.. = src/
+sourceFileExtensions=*.java, *.groovy
+compilerAdapter=org.codehaus.groovy.eclipse.ant.GroovyCompilerAdapter
+compilerAdapter.useLog=true
