support notes for cells, edited through properties view
Stored in cell as documentation with null key.
There may be only one entry per cell.

refs #483

Change-Id: I382581cc008a470037672132e685a38cd5186589

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.properties/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.properties/plugin.xml
@@ -334,6 +334,15 @@
                   type="eu.esdihumboldt.hale.common.align.model.Cell">
             </input>
          </propertySection>
+         <propertySection
+               class="eu.esdihumboldt.hale.ui.views.properties.cell.explanation.NotesCellSection"
+               enablesFor="1"
+               id="eu.esdihumboldt.hale.ui.views.properties.cell.notes"
+               tab="eu.esdihumboldt.hale.ui.views.properties.notes">
+            <input
+                  type="eu.esdihumboldt.hale.common.align.model.Cell">
+            </input>
+         </propertySection>
       </propertySections>
    </extension>
    <extension
@@ -386,6 +395,12 @@
                category="eu.esdihumboldt.hale.ui.views.properties.definition"
                id="eu.esdihumboldt.hale.ui.views.properties.explanation"
                label="Explanation">
+         </propertyTab>
+         <propertyTab
+               afterTab="eu.esdihumboldt.hale.ui.views.properties.explanation"
+               category="eu.esdihumboldt.hale.ui.views.properties.definition"
+               id="eu.esdihumboldt.hale.ui.views.properties.notes"
+               label="Notes">
          </propertyTab>
       </propertyTabs>
    </extension>
