--- a/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
@@ -6,6 +6,7 @@
    <extension-point id="eu.esdihumboldt.hale.io.project" name="Project extensions" schema="schema/eu.esdihumboldt.hale.io.project.exsd"/>
    <extension-point id="eu.esdihumboldt.hale.report" name="Report" schema="schema/eu.esdihumboldt.hale.report.exsd"/>
    <extension-point id="eu.esdihumboldt.hale.io.complexvalue" name="Complex Values" schema="schema/eu.esdihumboldt.hale.io.complexvalue.exsd"/>
+   <extension-point id="eu.esdihumboldt.hale.service" name="Scoped services in HALE" schema="schema/eu.esdihumboldt.hale.service.exsd"/>
    <extension
          point="org.eclipse.core.contenttype.contentTypes">
       <content-type
