lookup table complex value representation prototype
Not yet tested with complex values inside the lookup table.

Change-Id: Ia4e86f53f48eed0a97d5e7c1775c0dee35a328ee

--- a/common/plugins/eu.esdihumboldt.hale.common.lookup/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.lookup/plugin.xml
@@ -12,5 +12,14 @@
          </service>
       </services>
    </extension>
+   <extension
+         point="eu.esdihumboldt.hale.io.complexvalue">
+      <complexValue
+            descriptor="eu.esdihumboldt.hale.common.lookup.internal.LookupTableType"
+            id="eu.esdihumboldt.hale.common.lookup.lookuptable"
+            name="lookup-table"
+            type="eu.esdihumboldt.hale.common.lookup.LookupTable">
+      </complexValue>
+   </extension>
 
 </plugin>
