--- a/common/plugins/eu.esdihumboldt.hale.common.lookup/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.lookup/plugin.xml
@@ -21,5 +21,18 @@
             type="eu.esdihumboldt.hale.common.lookup.LookupTable">
       </complexValue>
    </extension>
+   <extension
+         point="eu.esdihumboldt.hale.io.action">
+      <action
+            id="eu.esdihumboldt.hale.lookup.import"
+            name="Lookup Table"
+            type="eu.esdihumboldt.hale.common.lookup.LookupTableImport">
+      </action>
+      <advisor
+            action="eu.esdihumboldt.hale.lookup.import"
+            class="eu.esdihumboldt.hale.common.lookup.internal.LookupImportAdvisor"
+            id="eu.esdihumboldt.hale.lookup.import.service">
+      </advisor>
+   </extension>
 
 </plugin>
