--- a/ext/xslt/eu.esdihumboldt.hale.io.xslt/plugin.xml
+++ b/ext/xslt/eu.esdihumboldt.hale.io.xslt/plugin.xml
@@ -45,6 +45,11 @@
             function="eu.esdihumboldt.hale.align.formattedstring"
             id="eu.esdihumboldt.hale.align.formattedstring.xslt">
       </propertyTransformation>
+      <propertyTransformation
+            class="eu.esdihumboldt.hale.io.xslt.transformations.property.mathexpression.XslMathExpression"
+            function="eu.esdihumboldt.cst.functions.numeric.mathexpression"
+            id="eu.esdihumboldt.hale.align.mathexpression.xslt">
+      </propertyTransformation>
    </extension>
 
 </plugin>
